<resources>
    <string name="app_name">SPEED CALCULATOR</string>
    <string name="distance">Enter distance (meter)</string>
    <string name="second">Enter time (second)</string>
    <string name="clear">CLEAR</string>
    <string name="cal">CALCULATOR</string>
    <string name="ave">Average Speed (km/h)</string>
    <string name="toast_a">Distance and time are required</string>
    <string name="toast_b">Time must be greater then zero</string>
    <string name="popup_title">SPEED CALCULATOR</string>
    <string name="popup">Speed is over limit!</string>

</resources>